# legal-cat

./: .gitignore  README.md  SETUP.md
back/: .env.example  .gitignore  GOOGLE_CLOUD_SETUP.md  README.md  iek  pyproject.toml  setup.sh
back/app/: agent_analyzer.py  graph_models.py  llm_analyzer.py  main.py  mcp_enhanced_analyzer.py  mcp_server.py  models.py  pdf_processor.py  rag_system.py
back/vector_store/: chroma.sqlite3
front/: .gitignore  colors.txt  package.json
front/public/: pdf.worker.min.mjs
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/analyze/: page.tsx
front/src/app/analyze/demo/: page.tsx
front/src/app/analyze/view/: layout.tsx  page.tsx
front/src/app/analyze/view/components/: ChatView.jsx  FileView.tsx
front/src/app/api/analyze/: route.ts
front/src/app/graph/: page.tsx
front/src/app/test/: page.tsx
front/src/components/: HighlightComponents.jsx  LegalDocumentViewer.jsx  Navbar.tsx  PDFViewer.jsx  PageContentComponents.jsx  idk.jsx
front/src/examples/: LLMDataStructure.js
front/src/services/: analysisAPI.ts
front/src/types/: analysis.ts
