[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.6",
    "pymupdf>=1.23.0",
    "google-adk>=1.14.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "chromadb>=0.5.0",
]
